# conway

./: .gitignore  CMakeLists.txt  Makefile  README.md  build  conway  conway_old  main.c  makefile  test.sh
.cmake/api/v1/reply/: cache-v2-353bf716e47c15ec7145.json  cmakeFiles-v1-2a0ae7af93b5dc78abb0.json  codemodel-v2-cccd503c3f8ce743d5ad.json  index-2023-03-02T12-07-24-0694.json  target-conway-Debug-6e416b2db7e0d0c833da.json
src/: cgl.c  cgl.h  game.c  game.h  hashlife.c  hashlife.h  main.c  makefile  utils.c  utils.h  vector.c  vector.h
